--- a/paper/references.bib
+++ b/paper/references.bib
@@ -76,3 +76,45 @@
   year={2012},
   publisher={Transportation Research Board of the National Academies}
 }
+
+@article{markkula2012review,
+  title={A review of near-collision driver behavior models},
+  author={Markkula, Gustav and Benderius, Ola and Wolff, Krister and Wahde, Mattias},
+  journal={Human factors},
+  volume={54},
+  number={6},
+  pages={1117--1143},
+  year={2012},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{ontanon2014case,
+  title={Case-based prediction of teen driver behavior and skill},
+  author={Ontan{\'o}n, Santiago and Lee, Yi-Ching and Snodgrass, Sam and Bonfiglio, Dana and Winston, Flaura K and McDonald, Catherine and Gonzalez, Avelino J},
+  booktitle={International Conference on Case-Based Reasoning},
+  pages={375--389},
+  year={2014},
+  organization={Springer}
+}
+
+@article{nechyba1998stochastic,
+  title={Stochastic similarity for validating human control strategy models},
+  author={Nechyba, Michael C and Xu, Yangsheng},
+  journal={IEEE Transactions on Robotics and Automation},
+  volume={14},
+  number={3},
+  pages={437--451},
+  year={1998},
+  publisher={IEEE}
+}
+
+@article{rabiner1986introduction,
+  title={An introduction to hidden Markov models},
+  author={Rabiner, Lawrence and Juang, B},
+  journal={ieee assp magazine},
+  volume={3},
+  number={1},
+  pages={4--16},
+  year={1986},
+  publisher={IEEE}
+}
