--- a/paper/references.bib
+++ b/paper/references.bib
@@ -118,3 +118,88 @@
   year={1986},
   publisher={IEEE}
 }
+
+@article{macadam2003understanding,
+  title={Understanding and modeling the human driver},
+  author={Macadam, Charles C},
+  journal={Vehicle System Dynamics},
+  volume={40},
+  number={1-3},
+  pages={101--134},
+  year={2003},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{fernlund2006lfo,
+  author    = {H. K. G. Fernlund and
+               Avelino J. Gonzalez and
+               Michael Georgiopoulos and
+               Ronald F. DeMara},
+  title     = {Learning tactical human behavior through observation of
+               human performance},
+  journal   = {IEEE Transactions on Systems, Man, and Cybernetics, Part
+               B},
+  volume    = {36},
+  number    = {1},
+  year      = {2006},
+  pages     = {128-140},
+}
+
+@inproceedings{Pomerleau_1989_2055,
+   author = "Dean Pomerleau",
+   editor = "D.S. Touretzky",
+   title = "ALVINN: An Autonomous Land Vehicle In a Neural Network",
+   booktitle = "Advances in Neural Information Processing Systems 1",
+   publisher = "Morgan Kaufmann",
+   year = "1989",
+}
+
+
+@inproceedings{floyd2008imitating,
+  author    = {Michael W. Floyd and
+               Babak Esfandiari and
+               Kevin Lam},
+  title     = {A Case-Based Reasoning Approach to Imitating RoboCup Players},
+  booktitle = {Proceedings of the Twenty-First International Florida Artificial Intelligence Research Society (FLAIRS)},
+  year      = {2008},
+  pages     = {251-256},
+}
+
+@article{ontanon2010darmok,
+   author =  {Santiago Onta{\~n}\'{o}n and Kinshuk Mishra and Neha Sugandh and Ashwin Ram},
+   title =   {On-line Case-Based Planning},
+   journal = {Computational Intelligence Journal},
+   volume = {26},
+   number = {1},
+   pages = {84--119},
+   year =    2010,
+}
+
+@inproceedings{DBLP:conf/ijcai/RubinW11,
+  author    = {Jonathan Rubin and
+               Ian Watson},
+  title     = {On Combining Decisions from Multiple Expert Imitators for
+               Performance},
+  booktitle = {IJCAI},
+  year      = {2011},
+  pages     = {344-349},
+}
+
+@inProceedings{lamontagne2012acquisition,
+   author =    {Luc Lamontagne and Francis Rugamba and Guy Mineau},
+   title =     {Acquisition of Cases in Sequential Games using Conditional Entropy},
+   booktitle = {ICCBR 2012 Workshop on TRUE: Traces for Reusing Users' Experience},
+   year =      2012,
+}
+
+@article{das2012differentiating,
+  title={Differentiating alcohol-induced driving behavior using steering wheel signals},
+  author={Das, Devashish and Zhou, Shiyu and Lee, John D},
+  journal={Intelligent Transportation Systems, IEEE Transactions on},
+  volume={13},
+  number={3},
+  pages={1355--1368},
+  year={2012},
+  publisher={IEEE}
+}
